--- a/DCI_[3 sites]/SW01.cfg
+++ b/DCI_[3 sites]/SW01.cfg
@@ -624,6 +624,7 @@ router bgp 65000
  !
  neighbor interface Eth1/1
   peer-group remote_dc
+  bfd
  !
  neighbor interface Vlan100
   peer-group local_dc
