--- a/DCI_[3 sites]/SW02.cfg
+++ b/DCI_[3 sites]/SW02.cfg
@@ -600,7 +600,7 @@ router bgp 65000
  peer-group local_dc
   remote-as internal
   timers connect 30
-  advertisement-interval 0
+  advertisement-interval 5
   capability extended-nexthop
   !
   address-family ipv4 unicast
@@ -613,7 +613,7 @@ router bgp 65000
  peer-group remote_dc
   remote-as external
   timers connect 30
-  advertisement-interval 0
+  advertisement-interval 5
   capability extended-nexthop
   !
   address-family ipv4 unicast
@@ -625,9 +625,11 @@ router bgp 65000
  !
  neighbor interface Eth1/1
   peer-group remote_dc
+  bfd
  !
  neighbor interface Eth1/3
   peer-group remote_dc
+  bfd
  !
  neighbor interface Vlan100
   peer-group local_dc
