--- a/DCI_[3 sites]/SW03.cfg
+++ b/DCI_[3 sites]/SW03.cfg
@@ -599,7 +599,7 @@ router bgp 65001
  peer-group local_dc
   remote-as internal
   timers connect 30
-  advertisement-interval 0
+  advertisement-interval 5
   capability extended-nexthop
   !
   address-family ipv4 unicast
@@ -624,6 +624,7 @@ router bgp 65001
  !
  neighbor interface Eth1/1
   peer-group remote_dc
+  bfd
  !
  neighbor interface Vlan100
   peer-group local_dc
