--- a/DCI_[3 sites]/SW05_optional.cfg
+++ b/DCI_[3 sites]/SW05_optional.cfg
@@ -582,7 +582,7 @@ router bgp 65003
  peer-group remote_dc
   remote-as external
   timers connect 30
-  advertisement-interval 0
+  advertisement-interval 5
   capability extended-nexthop
   !
   address-family ipv4 unicast
@@ -594,9 +594,11 @@ router bgp 65003
  !
  neighbor interface Eth1/1
   peer-group remote_dc
+  bfd
  !
  neighbor interface Eth1/2
   peer-group remote_dc
+  bfd
 !
 interface vxlan vtep3
  source-ip Loopback1
