--- a/DCI_[3 sites]/SW01.cfg
+++ b/DCI_[3 sites]/SW01.cfg
@@ -212,8 +212,8 @@ line vty
  service-policy type qos in oob-qos-policy
 !
 interface Vlan50
- no autostate
  ip anycast-address 192.168.50.200/24
+ neigh-suppress
 !
 interface Vlan100
  ipv6 enable
