--- a/DCI_[3 sites]/SW05_optional.cfg
+++ b/DCI_[3 sites]/SW05_optional.cfg
@@ -208,8 +208,8 @@ line vty
  service-policy type qos in oob-qos-policy
 !
 interface Vlan50
- no autostate
  ip anycast-address 192.168.50.200/24
+ neigh-suppress
 !
 interface Loopback 0
  description router_ID
