--- a/DCI_[3 sites]/SW03.cfg
+++ b/DCI_[3 sites]/SW03.cfg
@@ -596,12 +596,14 @@ router bgp 65001
  address-family l2vpn evpn
   advertise-all-vni
   dup-addr-detection
+  advertise-pip ip 1.1.1.3 peer-ip 1.1.1.4
  !
  peer-group local_dc
   remote-as internal
   timers connect 30
   advertisement-interval 5
   capability extended-nexthop
+  bfd
   !
   address-family ipv4 unicast
    activate
@@ -615,6 +617,7 @@ router bgp 65001
   timers connect 30
   advertisement-interval 5
   capability extended-nexthop
+  bfd
   !
   address-family ipv4 unicast
    activate
@@ -625,7 +628,6 @@ router bgp 65001
  !
  neighbor interface Eth1/1
   peer-group remote_dc
-  bfd
  !
  neighbor interface Vlan100
   peer-group local_dc
