--- a/DCI_[3 sites]/SW04.cfg
+++ b/DCI_[3 sites]/SW04.cfg
@@ -597,12 +597,14 @@ router bgp 65001
  address-family l2vpn evpn
   advertise-all-vni
   dup-addr-detection
+  advertise-pip ip 1.1.1.4 peer-ip 1.1.1.3
  !
  peer-group local_dc
   remote-as internal
   timers connect 30
   advertisement-interval 5
   capability extended-nexthop
+  bfd
   !
   address-family ipv4 unicast
    activate
@@ -616,6 +618,7 @@ router bgp 65001
   timers connect 30
   advertisement-interval 5
   capability extended-nexthop
+  bfd
   !
   address-family ipv4 unicast
    activate
@@ -630,7 +633,6 @@ router bgp 65001
  !
  neighbor interface Eth1/3
   peer-group remote_dc
-  bfd
  !
  neighbor interface Vlan100
   peer-group local_dc
