--- a/DCI_[3 sites]/SW01.cfg
+++ b/DCI_[3 sites]/SW01.cfg
@@ -584,9 +584,11 @@ interface Eth1/56
 !
 router bgp 65000
  router-id 1.1.1.1
+ garceful-restart enable
  log-neighbor-changes
  bestpath as-path multipath-relax
- timers 60 180
+ # timers 60 180   <----Slow mode
+ timers 3 9
  !
  address-family ipv4 unicast
   redistribute connected
@@ -600,8 +602,9 @@ router bgp 65000
  !
  peer-group local_dc
   remote-as internal
-  timers connect 30
-  advertisement-interval 5
+  timers connect 10
+  # advertisement-interval 5 < -Slow Mode 
+  advertisement-interval 0 
   capability extended-nexthop
   bfd
   !
@@ -614,8 +617,8 @@ router bgp 65000
  !
  peer-group remote_dc
   remote-as external
-  timers connect 30
-  advertisement-interval 5
+  timers connect 5
+  advertisement-interval 0
   capability extended-nexthop
   bfd
   !
