--- a/DCI_[3 sites]/SW01.cfg
+++ b/DCI_[3 sites]/SW01.cfg
@@ -635,7 +635,8 @@ router bgp 65000
  neighbor interface Vlan100
   peer-group local_dc
 !
-interface vxlan vtep1
+interface vxlan vtep17
+ primary-ip Loopback0
  source-ip Loopback1
  qos-mode pipe dscp 0
  map vni 500 vlan 50
